[package]
name = "xshell"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.8.0"
crossbeam = "0.7.3"
rexpect = "0.3"
tempfile = "3"
clap = "2.33.0"
prettytable-rs = "^0.8"
async-std = "1.6.2"


